tests/should_fail/unsupported/1827/test3.stderr
error: Unsupported expression: Pattern matching literals on Int are unsupported by Pearlite. Consider using if-then-else instead.
 --> test3.rs:7:13
  |
7 |             (0, _, _) | (_, 0, _) | (_, _, 0) => 1,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

